--- a/spec/fixtures/bookmarks.yml
+++ b/spec/fixtures/bookmarks.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+one:
+  site_id: 1
+  path: MyString
+  title: MyText
+
+two:
+  site_id: 1
+  path: MyString
+  title: MyText
